--- a/LEVEL 1/Task 1/LandingPage.css
+++ b/LEVEL 1/Task 1/LandingPage.css
@@ -22,7 +22,7 @@ body{
     z-index: -1;
     width: 30%;
     height: 100vh;
-    background-color: rgb(42, 168, 38);
+    background-color: #5c74c5;
 }
 
 nav{
