--- a/LEVEL 1/Task 2/portfolio.css
+++ b/LEVEL 1/Task 2/portfolio.css
@@ -1,2 +1,2 @@
-*{padding: 0; margin: 0; box-sizing: border-box;}
+*{padding: 0; margin: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;}
 
