--- a/LEVEL 1/Task 2/portfolio.css
+++ b/LEVEL 1/Task 2/portfolio.css
@@ -1,2 +1,49 @@
 *{padding: 0; margin: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;}
+header{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.8)),
+    url("monaal-garg-mpzUR989JEg-unsplash.jpg"); 
+    color: white; 
+    background-size: cover;
+}
+
+nav{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(153, 223, 245);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 70px;
+    flex-wrap: wrap;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+}
+
+.logo{
+    font-size: 35px;
+    letter-spacing: 5px;
+    font-weight: bold;
+}
+
+.menu a{
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    padding: 10px;
+} 
+
+.menu a:nth-child(5){
+    background-color: green ;
+    border-radius: 8px;
+    margin: 2px;
+}
+
+.menu i{
+    font-size: 25px;
+    margin: 6px;
+    cursor: pointer;
+}
+
 
