--- a/LEVEL 1/Task 2/portfolio.css
+++ b/LEVEL 1/Task 2/portfolio.css
@@ -11,7 +11,6 @@ header{
 nav{
     width: 100%;
     height: 100px;
-    background-color: rgb(153, 223, 245);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,19 +30,65 @@ nav{
     text-decoration: none;
     color: white;
     font-size: 18px;
-    padding: 10px;
+    padding: 25px;
+
 } 
 
 .menu a:nth-child(5){
     background-color: green ;
     border-radius: 8px;
-    margin: 2px;
+    margin: 3px;
+    padding: 10px;
 }
 
 .menu i{
     font-size: 25px;
     margin: 6px;
     cursor: pointer;
+}
+
+.menu a:hover{
+    background-color: green;
+    border-radius: 8px;
+    padding: 10px;
+    margin: 4px;
+    
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+    padding: 0 70px;
+}
+
+.left{
+    flex-basis: 60%;
+}
+.right{
+    flex-basis: 30%;
+}
+
+#hire{
+    border-radius: 8px;
+    background-color: green;
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+    margin: 25px;
+}
+#myp{
+    border-radius: 8px;
+    border: 1px dashed white;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    padding: 10px 30px;
+    margin: 10px;
 }
 
 
