--- a/LEVEL 1/Task 2/portfolio.css
+++ b/LEVEL 1/Task 2/portfolio.css
@@ -30,7 +30,8 @@ nav{
     text-decoration: none;
     color: white;
     font-size: 18px;
-    padding: 25px;
+    padding: 15px;
+    margin: 8px;
 
 } 
 
@@ -38,7 +39,7 @@ nav{
     background-color: green ;
     border-radius: 8px;
     margin: 3px;
-    padding: 10px;
+    padding: 15px;
 }
 
 .menu i{
@@ -50,8 +51,8 @@ nav{
 .menu a:hover{
     background-color: green;
     border-radius: 8px;
-    padding: 10px;
-    margin: 4px;
+    
+    
     
 }
 
@@ -68,6 +69,20 @@ nav{
 .left{
     flex-basis: 60%;
 }
+
+.left h2{
+    color: green;
+    margin-bottom: 25px
+}
+
+.left h1{
+    font-size: 65px;
+}
+
+.left p{
+    line-height: 30px;
+}
+
 .right{
     flex-basis: 30%;
 }
@@ -90,5 +105,31 @@ nav{
     padding: 10px 30px;
     margin: 10px;
 }
+#bio{
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    padding: 150px 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap; 
+    
+}
+.leftbio{
+    flex-basis: 45%;
+}
+.rightbio{
+    flex-basis: 55%;
+}
+
+.leftbio img{
+    width: 100%;
+    height: 550px;
+}
+.rightbio{
+    text-align: right;
+}
+
 
 
