--- a/LEVEL 1/Task 2/portfolio.css
+++ b/LEVEL 1/Task 2/portfolio.css
@@ -106,6 +106,7 @@ nav{
     margin: 10px;
 }
 #bio{
+    background-color: rgb(249, 249, 250);
     cursor: pointer;
     width: 100%;
     height: 100%;
@@ -117,19 +118,140 @@ nav{
     
 }
 .leftbio{
-    flex-basis: 45%;
+    flex-basis: 40%;
 }
 .rightbio{
-    flex-basis: 55%;
+    flex-basis: 60%;
+    background-color: rgb(231, 243, 247);
+    border-radius: 35px;
+}
+
+.rightbio:hover{
+    background-color: rgb(201, 197, 219);
+    
 }
 
 .leftbio img{
     width: 100%;
-    height: 550px;
+    height: 500px;
 }
 .rightbio{
     text-align: right;
+    padding: 0 40px;
+}
+.rightbio p{
+    line-height: 35px;
+    margin: 15px 0;
 }
 
+.rightbio h1{
+    font-size: 39px;
+    font-weight: lighter;
+}
+.info{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    text-align: left;
+}
+.follow{
+    text-align: center;
+}
 
+.follow i{
+    color: green;
+    font-size: 25px;
+    margin: 0 8px;
+}
 
+.linkk{
+    text-align: center;
+    margin: 45px;
+    
+}
+
+#wire{
+    text-decoration: none;
+    color: rgb(221, 240, 221);
+    font-size: 20px;
+    border-radius: 8px;
+    padding:  15px 30px;
+    margin: 20px;
+    background-color: rgb(18, 231, 18);
+}
+
+#cv{
+    text-decoration: none;
+    color: black;
+    border: 1px dashed black;
+    font-size: 20px;
+    padding:  15px 30px ;
+    margin: 20px;
+    border-radius: 8px;
+}
+
+#skills{
+    padding: 50px 70px;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(229, 248, 248);
+    text-align: center;
+}
+
+.intro h1{
+    font-size: 40px;
+}
+.cardbody{
+    flex-basis: 30%;
+    background-color: rgb(250, 249, 247);
+    border-radius: 44px;
+    padding: 40px;
+}
+.card{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.cardbody h3{
+    font-size: 25px;
+    margin: 15px;
+}
+
+#project{
+    height: 100%;
+    width: 100%;
+    padding: 50px 60px;
+    text-align: center;
+    background-color: rgb(244, 245, 188);
+}
+
+.text h1{
+    font-size: 40px;
+}
+
+.otrbdy{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin: 30px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+.inrbdy img{
+    border-radius: 44px;
+}
+footer{
+    color: rgb(20, 10, 10);
+    background-color: rgb(196, 230, 233);
+    text-align: center;
+    font-size: 55px;
+
+}
