--- a/LEVEL 1/Task 3/style.css
+++ b/LEVEL 1/Task 3/style.css
@@ -25,5 +25,39 @@ body{
 }
 
 input{
-    wi
+    width: 340px;
+    padding: 25px;
+    border: none ;
+    margin: 10px;
+    background-color: transparent;
+    box-shadow: 0px 4px 10px rgba(90, 89, 89, 0.1);
+    font-size: 40px;
+    text-align: right;
+    cursor: pointer;
+    color: white;
+}
+
+input::placeholder{
+    color: white;
+}
+
+button{
+    border: none;
+    width: 60px;
+    height: 60px;
+    background: transparent;
+    color: white;
+    border-radius: 50%;
+    box-shadow: -8px -8px 15px rgba(247, 244, 244, 0.1);
+    cursor: pointer;
+    font-size: 20px;
+    margin: 10px;
+}
+
+.eql{
+    background-color: orange;
+}
+
+.operator{
+    color: rgb(15, 235, 15);
 }
